<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".fragment.LoginFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="128dp" android:textSize="20sp" android:text="@string/login_title"
            android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/pin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:maxLength="4"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/pin" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"/>
    <Button
            android:text="@string/login_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_biometry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:layout_marginTop="16dp"/>
    <FrameLayout
            android:id="@+id/error_frame"
            android:layout_width="377dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/login_btn" android:background="@android:color/holo_red_light">

        <TextView
                android:text="@string/error_wrong_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/error" android:textAlignment="center"
                android:gravity="center" android:textColor="@android:color/white"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
