<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.SetPinFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="128dp" android:textSize="20sp" android:text="@string/set_pin_title"
            android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/pin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:maxLength="4"/>
    <Button
            android:text="@string/set_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/set_pin_btn"
            app:layout_constraintTop_toBottomOf="@+id/pin" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"/>
    <FrameLayout
            android:layout_width="377dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/set_pin_btn" android:background="@android:color/holo_red_light"
            android:id="@+id/error_frame">

        <TextView
                android:text="@string/error_wrong_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/error" android:textAlignment="center"
                android:gravity="center" android:textColor="@android:color/white"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
